# InterviewPilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  config.py  evaluator.py  main.py  prompts.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/token/: route.ts
frontend/src/app/interview/: page.tsx
frontend/src/components/: login-form.tsx
knowledge/behavioral/: common_questions.md  star_method.md
knowledge/system_design/: framework.md
knowledge/technical/: dsa_patterns.md
rag/: __init__.py  chunker.py  loader.py  retriever.py  vectorstore.py
